--- a/lab2/package.json
+++ b/lab2/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lab1",
+  "name": "lab2",
   "version": "1.0.0",
   "description": "",
-  "main": "hello.js",
+  "main": "lab2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
